--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
 </head>
 <body>
     <h1> titulo de la pag</h1>
+    <p>
+        mi noombre es kimbely gonzalez
+        Estudiante de tec en ingeniera de software
+        Edad 19 años
+    </p>
 </body>
 </html>
